--- a/common/templates/base.html
+++ b/common/templates/base.html
@@ -261,10 +261,13 @@
                                         class="ecicon eci-facebook"></i></a></li>
                                 <li class="list-inline-item"><a class="hdr-twitter" href="#"><i
                                         class="ecicon eci-twitter"></i></a></li>
-                                <li class="list-inline-item"><a class="hdr-instagram" href="#"><i
-                                        class="ecicon eci-instagram"></i></a></li>
-                                <li class="list-inline-item"><a class="hdr-linkedin" href="#"><i
-                                        class="ecicon eci-linkedin"></i></a></li>
+                                <li class="list-inline-item"><a class="hdr-instagram" href="https://wa.me/998985737076?text=%D0%90%D1%81%D1%81%D0%B0%D0%BB%D0%B0%D0%BC%D1%83%20%D0%B0%D0%BB%D0%B0%D0%B9%D0%BA%D1%83%D0%BC%20%D0%B2%D0%B0%20%D1%80%D0%BE%D2%B3%D0%BC%D0%B0%D1%82%D1%83%D0%BB%D0%BB%D0%BE%D2%B3%D0%B8%20%D0%B2%D0%B0%20%D0%B1%D0%B0%D1%80%D0%BE%D0%BA%D0%B0%D1%82%D1%83%D2%B3%D1%83"><i
+                                        class="ecicon eci-whatsapp"></i></a></li>
+                                <li class="list-inline-item"><a class="hdr-linkedin" href="https://t.me/Alam_Shodiev"><i
+                                        class="ecicon eci-telegram"></i></a></li><br>
+
+                                <span><a href="tel: +998985737076">+998 98 573 70 76</a></li></span><br>
+                                <span><a href="tel: +998976147076">+998 97 614 70 76</a></li></span>
                             </ul>
                         </div>
                     </div>
