feat: add status model in product model

--- a/common/templates/index.html
+++ b/common/templates/index.html
@@ -93,7 +93,7 @@
                                                 <img class="hover-image"
                                                      src="{{ i.image.url }}" alt="Product"/>
                                             </a>
-                                            <span class="percentage">New</span>
+                                            <span class="percentage">{{ i.status.title }}</span>
                                         </div>
                                     </div>
                                     <div class="ec-pro-content">
@@ -155,7 +155,7 @@
                                                 <img class="hover-image"
                                                      src="{{ i.image.url }}" alt="Product"/>
                                             </a>
-                                            <span class="percentage">New</span>
+                                            <span class="percentage">{{ i.status.title }}</span>
                                         </div>
                                     </div>
                                     <div class="ec-pro-content">
@@ -180,7 +180,7 @@
                                                 <img class="hover-image"
                                                      src="{{ i.image.url }}" alt="Product"/>
                                             </a>
-                                            <span class="percentage">New</span>
+                                            <span class="percentage">{{ i.status.title }}</span>
                                         </div>
                                     </div>
                                     <div class="ec-pro-content">
