--- a/product/templates/product-list.html
+++ b/product/templates/product-list.html
@@ -69,7 +69,7 @@
                                                 <img class="hover-image"
                                                      src="{{ i.image.url }}" alt="Product"/>
                                             </a>
-                                            <span class="percentage">New</span>
+                                            <span class="percentage">{{ i.status.title }}</span>
                                         </div>
                                     </div>
                                     <div class="ec-pro-content">
