--- a/product/templates/product-list.html
+++ b/product/templates/product-list.html
@@ -31,27 +31,27 @@
         <div class="row">
             <div class="ec-shop-rightside col-lg-12 order-lg-last col-md-12 order-md-first margin-b-30">
                 <!-- Shop Top Start -->
-                <div class="ec-pro-list-top d-flex">
-                    <div class="col-md-6 ec-grid-list">
-                        <div class="ec-gl-btn">
-                            <button class="btn btn-grid active"><i class="fi-rr-apps"></i></button>
-                            <button class="btn btn-list"><i class="fi-rr-list"></i></button>
-                        </div>
-                    </div>
-                    <div class="col-md-6 ec-sort-select">
-                        <span class="sort-by">Sort by</span>
-                        <div class="ec-select-inner">
-                            <select name="ec-select" id="ec-select">
-                                <option selected disabled>Position</option>
-                                <option value="1">Relevance</option>
-                                <option value="2">Name, A to Z</option>
-                                <option value="3">Name, Z to A</option>
-                                <option value="4">Price, low to high</option>
-                                <option value="5">Price, high to low</option>
-                            </select>
-                        </div>
-                    </div>
-                </div>
+<!--                <div class="ec-pro-list-top d-flex">-->
+<!--                    <div class="col-md-6 ec-grid-list">-->
+<!--                        <div class="ec-gl-btn">-->
+<!--                            <button class="btn btn-grid active"><i class="fi-rr-apps"></i></button>-->
+<!--                            <button class="btn btn-list"><i class="fi-rr-list"></i></button>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <div class="col-md-6 ec-sort-select">-->
+<!--                        <span class="sort-by">Sort by</span>-->
+<!--                        <div class="ec-select-inner">-->
+<!--                            <select name="ec-select" id="ec-select">-->
+<!--                                <option selected disabled>Position</option>-->
+<!--                                <option value="1">Relevance</option>-->
+<!--                                <option value="2">Name, A to Z</option>-->
+<!--                                <option value="3">Name, Z to A</option>-->
+<!--                                <option value="4">Price, low to high</option>-->
+<!--                                <option value="5">Price, high to low</option>-->
+<!--                            </select>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
                 <!-- Shop Top End -->
 
                 <!-- Shop content Start -->
@@ -76,8 +76,10 @@
                                         <h5 class="ec-pro-title"><a href="{% url 'product:product_detail' i.slug %}">{{ i.name }}</a></h5>
                                         <div class="ec-pro-list-desc">{{ i.description|truncatechars:150 }}
                                         </div>
+                                        {% if i.discount_price %}
+                                            <strike><span class="old-price">{{ i.discount_price }}  сум</span></strike>
+                                        {% endif %}
                                         <span class="ec-price">
-<!--                                                <span class="old-price">$27.00</span>-->
                                                 <span class="new-price">{{ i.price }} сум</span>
                                             </span>
 
