fix: currency type in all html static

--- a/product/templates/product-detail.html
+++ b/product/templates/product-detail.html
@@ -65,7 +65,7 @@
                                     <div class="ec-single-price-stoke">
                                         <div class="ec-single-price">
                                             <span class="ec-single-ps-title">Narx</span>
-                                            <span class="new-price">{{ product_obj.price }} сум</span>
+                                            <span class="new-price">{{ product_obj.price }} $</span>
                                         </div>
                                     </div>
                                 </div>
