--- a/product/templates/product-list.html
+++ b/product/templates/product-list.html
@@ -77,10 +77,10 @@
                                         <div class="ec-pro-list-desc">{{ i.description|truncatechars:150 }}
                                         </div>
                                         {% if i.discount_price %}
-                                            <strike><span class="old-price">{{ i.discount_price }}  сум</span></strike>
+                                            <strike><span class="old-price">{{ i.discount_price }}  $</span></strike>
                                         {% endif %}
                                         <span class="ec-price">
-                                                <span class="new-price">{{ i.price }} сум</span>
+                                                <span class="new-price">{{ i.price }} $</span>
                                             </span>
 
                                     </div>
