--- a/common/templates/index.html
+++ b/common/templates/index.html
@@ -101,10 +101,10 @@
                                         <div class="ec-pro-list-desc">{{ i.description|truncatechars:150 }}
                                         </div>
                                         {% if i.discount_price %}
-                                            <strike><span class="old-price">{{ i.discount_price }}  сум</span></strike>
+                                            <strike><span class="old-price">{{ i.discount_price }}  $</span></strike>
                                         {% endif %}
                                         <span class="ec-price">
-                                            <span class="new-price">{{ i.price }} сум</span>
+                                            <span class="new-price">{{ i.price }} $</span>
                                         </span>
 
                                     </div>
@@ -165,10 +165,10 @@
                                         <div class="ec-pro-list-desc">{{ i.description|truncatechars:150 }}
                                         </div>
                                         {% if i.discount_price %}
-                                            <strike><span class="old-price">{{ i.discount_price }}  сум</span></strike>
+                                            <strike><span class="old-price">{{ i.discount_price }}  $</span></strike>
                                         {% endif %}
                                         <span class="ec-price">
-                                                <span class="new-price">{{ i.price }} сум</span>
+                                                <span class="new-price">{{ i.price }} $</span>
                                             </span>
 
                                     </div>
@@ -192,11 +192,11 @@
                                         <div class="ec-pro-list-desc">{{ i.description|truncatechars:150 }}
                                         </div>
                                         {% if i.discount_price %}
-                                            <strike><span class="old-price">{{ i.discount_price }}  сум</span></strike>
+                                            <strike><span class="old-price">{{ i.discount_price }}  $</span></strike>
                                         {% endif %}
                                         <span class="ec-price">
 <!--                                                <span class="old-price">$27.00</span>-->
-                                                <span class="new-price">{{ i.price }} сум</span>
+                                                <span class="new-price">{{ i.price }} $</span>
                                             </span>
                                     </div>
                                 </div>
